# aspace-wb-scripts

./: .gitignore  AGENTS.md  CSV.py  Create_ASpace_DOs.py  Create_Blank_Fillable.py  Create_Fillable.py  Filled_to_WB.py  ISO639json_to_CSV.py  LICENSE  Nodes_from_WB.py  PACKAGE_REFACTORING.md  README.md  README.txt  Validate_Filled.py  _CSV.py  _Constants_and_Mappings.py  _ConvertData.py  _ExtractDir.py  _ExtractFile.py  _ISO639json_to_CSV.py  _Validate.py  _testing.py  agents_from_title_and_refid.py  blank_all_fields_template.xlsx  constants_and_mappings.py  convert_data.py  default_specs.py  documentation - tables.xlsx  documentation.docx  extract_dir.py  extract_file.py  pyproject.toml  requirements.txt  setup.py  validate.py
CVs/: cnair_subject.csv  iso639.csv
_CVs/: cnair_culture.csv  iso639.csv  relator.csv
_headers/: _WBFinalOrderBook.csv  _WBFinalOrderSingle.csv  _allValid.csv  _downfilling.csv  _requiredBook.csv  _requiredSingle.csv  cnair_book.csv  cnair_newaudio.csv  cnair_single.csv
aspace_wb/: __init__.py
aspace_wb/cli/: __init__.py  create_aspace_dos.py  create_blank_fillable.py  create_fillable.py  filled_to_wb.py  validate_filled.py
aspace_wb/core/: __init__.py  specs.py
aspace_wb/data/vocabularies/: cnair_subject.csv  relator.csv
aspace_wb/scripts/: create_aspace_dos.py  create_blank_fillable.py  create_fillable.py  create_fillable_old.py  fillable_merged.py  filled_to_wb.py  validate_filled.py
aspace_wb/utils/: ISO639json_to_CSV.py  __init__.py  convert_data.py  default_specs.py  extract_dir.py  extract_file.py  validate.py
fields/: _WBFinalOrderBook.csv  _WBFinalOrderSingle.csv  _allValid.csv  _downfilling.csv  _requiredBook.csv  _requiredSingle.csv  cnair_book.csv  cnair_newaudio.csv  cnair_single.csv  cnairaudio.csv  cnairbook.csv  cnairimage.csv  example_minimum_book.csv  example_minimum_single.csv
utilities/: ISO639json_to_CSV.py  convert_data.py  extract_dir.py  extract_file.py  use_CSVs.py  validate.py
